# frac_rust_wasm

./: Cargo.toml  package-lock.json  package.json
js/: index.js
src/: lib.rs
static/: index.html  main.css
